Reduced workload scope

--- a/proposal.html
+++ b/proposal.html
@@ -33,6 +33,7 @@ To judge the quality and performance of my implementation, for a set of actions 
 <h3>Goal 1: Setup</h3>
 Set up the development environment.
 <ul>
+  <li><i>August 4 Update:</i> Focus on the robot / basic arm. The other models are bonus.</li>
   <li>Create or find robot / basic arm, rope, and human figure models.</li>
   <li>Place robot / basic arm, rope, and human figure in three isolated environments, and associate a "limb" with a control / target point while associating another part / limb with an anchor.</li>
   <li>Implement extra functionality for ease of testing such as switching between environments, start / stop simulation, dropdown menu to switch among the IK methods implemented, select different style constraints, etc. (Done at beginning and at the end (wrap up) phases of the project)</li>
@@ -111,13 +112,22 @@ Updated as I go along.
       <li><a href="https://unboring.net/workflows/animation.html">Rig model, export as Three.js-readable <code>.json</code> file</a> and <a href="https://stackoverflow.com/questions/20433474/dynamic-bones-animation-in-three-js">import into Three.js as a skinnedmesh.</a></li>
     </ul>
   </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-unchecked">Learn Three.js</span>
+    <ul>
+      <li>Currently going through <a href="https://www.linkedin.com/learning/learning-3d-graphics-on-the-web-with-three-js">this course</a> (finished Chapters 10 of 10).</li>
+      <li>Notes <a href="./three.html">here</a>.</li>
+      <li>From what I know, rigging doesn't really exist in Three.js so the process will be more involved than I initially assumed. As a result, I decided to scale down the project and focus on applying IK to just the arm.</li>
+    </ul>
+  </li>
   <br />
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Learn Three.js</span>
+    <span class="to-do-children-unchecked">Figure out skeletal rigging in Three.js</span>
     <ul>
-      <li>Currently going through <a href="https://www.linkedin.com/learning/learning-3d-graphics-on-the-web-with-three-js">this course</a> (finished Chapters 4 of 10).</li>
-      <li>Notes <a href="./three.html">here</a>.</li>
+      <li>Following
+        <a href="https://www.youtube.com/watch?v=z0MJ2KdGPFE">https://www.youtube.com/watch?v=z0MJ2KdGPFE</a> but I don't speak German.</li>
     </ul>
   </li>
   <br />
@@ -320,6 +330,12 @@ Updated as I go along.
     <a href="https://threejs.org/">https://threejs.org/</a>
     <ul>
       <li>JavaScript 3D library</li>
+    </ul>
+  </li>
+  <li>
+    <a href="https://www.youtube.com/watch?v=z0MJ2KdGPFE">https://www.youtube.com/watch?v=z0MJ2KdGPFE</a>
+    <ul>
+      <li>Video in German about how to do skeletal animation.</li>
     </ul>
   </li>
 </ul>
