--- a/three.html
+++ b/three.html
@@ -17,8 +17,8 @@ These are my notes from going through <a href="https://www.linkedin.com/learning
 
 <h2>1. Building a Simple Scene</h2>
 <ul>
-  <li>WebGL: low-level JavaScript API for creating and displaying 3D content in browser with GPU.</li>
-  <li>Three.js: open-source JavaScript library to make it easier to do 3D stuff with WebGL. Need to serve HTML page with a server.</li>
+  <li>WebGL: Low-level JavaScript API for creating and displaying 3D content in browser with GPU.</li>
+  <li>Three.js: Open-source JavaScript library to make it easier to do 3D stuff with WebGL. Need to serve HTML page with a server.</li>
 </ul>
 <br />
 Minified: <a href="http://threejs.org/build/three.min.js">http://threejs.org/build/three.min.js</a>
@@ -27,7 +27,7 @@ Minified: <a href="http://threejs.org/build/three.min.js">http://threejs.org/bui
   <li>Not as good for debugging</li>
 </ul>
 <br />
-Scene object: container for 3D objects.
+Scene object: Container for 3D objects.
 <br />
 Camera: POV.
 <ul>
@@ -206,7 +206,7 @@ Lights
   <li>Point Light: Shadows point away from point light. <code>var light = new THREE.PointLight(0xffffff, intensity)</code>.</li>
   <li>Spotlight: Same arguments as point light. Light limited to a  cone. <code>var light = new THREE.SpotLight(0xffffff, intensity)</code>.</li>
   <ul>
-    <li><code>penumbra</code> property: value between 0 and 1. Controls the softness of the edge of the spotlight.</li>
+    <li><code>penumbra</code> property: Value between 0 and 1. Controls the softness of the edge of the spotlight.</li>
   </ul>
   <li>Directional Light: Emits parallel light rays. Good for simulating light sources that are far away, like the sun. <code>var light = new THREE.DirectionalLight(0xffffff, intensity)</code>.</li>
   <ul>
@@ -233,10 +233,17 @@ dat.gui
 </ul>
 <pre class="code">
 // adds controls to scene
-var gui = new dat.GUI();
+var gui = new dat.GUI()
+
+// folders organize the controls into groups
+var folder1 = gui.addFolder('light_1');
 // args: what to control, value to control, min value, max value.
-// cameraZPosition.position.z = userInput
-gui.add(cameraZPosition.position, 'z', 0, 100);
+folder1.add(lightLeft, 'intensity', 0, 10);
+folder1.add(lightLeft.position, 'x', -5, 15);
+folder1.add(lightLeft.position, 'y', -5, 15);
+folder1.add(lightLeft.position, 'z', -5, 15);
+// the folder will be open at the start
+folder1.open();
 </pre>
 <br />
 <br />
@@ -281,8 +288,310 @@ Shadows are complicated. Need to enable in multiple places.
 Group objects with <code>var group = new THREE.Group()</code>, then add objects to the group with <code>.add</code>. Like a <code>div</code>. It is a non-geometric object that helps us control the transformation of other shapes easier.
 
 <h2>4. Animation</h2>
+Animation done inside update loop.
+<br />
+Helpful math functions for animation:
+<ul>
+  <li><code>Math.random()</code> to return random value between 0 & 1.</li>
+  <li><code>Math.cos()</code> gives cosine value.</li>
+  <li><code>Math.sin()</code> gives sine value.</li>
+</ul>
+Use cos/sine wth the clock object to get smooth animation through time!
+<br />
+Clock object: Gets elapsed time since created.
+<pre class="code">
+// create the clock object.
+var clock = new THREE.Clock();
+...
+// pass into update fn
+function update(renderer, scene, camera, controls, clock) {
+	...
+	var timeElapsed = clock.getElapsedTime();
+  ...
+	requestAnimationFrame(function() {
+		update(renderer, scene, camera, controls, clock);
+	})
+}
+</pre>
+<br />
+JavaScript doesn't have a built-in noise function.
+<ul>
+  <li>Solution: 3rd-party libraries such as noisejs for 2D and 3D simplex and Perlin noise</li>
+</ul>
+<br />
+noisejs: <code>noise.simplex2(a, a)</code> -- simplex noise. Similar to Perlin noise but lower computational complexity and fewer multiplications.
+<br />
+Cameras
+<ul>
+  <li>Perspective Camera</li>
+  <ul>
+    <li>Natural way of looking at scene</li>
+    <li>Size changes with distance</li>
+  </ul>
+  <li>Orthographic Camera</li>
+  <ul>
+    <li>Used in some technical drawings or isometric games</li>
+    <li>No perspective</li>
+    <li><code>var camera = new THREE.OrthographicCamera(-15, 15, 15, -15, 1, 100)</code> with arguments: camera rostrum left plane, camera rostrum right plane, camera rostrum top plane, camera rostrum bottom plane, near plane, far plane</li>
+  </ul>
+</ul>
+<br />
+<br />
+Animation Rig
+<br />
+Helper objects that facilitate animation process.
+<br />
+Control rotation, position:
+<pre class="code">
+var cameraZPosition = new THREE.Group();
+var cameraXRotation = new THREE.Group();
+var cameraYRotation = new THREE.Group();
+
+cameraZPosition.add(camera);
+cameraXRotation.add(cameraZPosition);
+cameraYRotation.add(cameraXRotation);
+scene.add(cameraYRotation);
+</pre>
+Isolating specific transforms to specific objects help in keeping animation process managable.
+<br />
+Tween.js provides easing curves.
+<br />
+Create in global with start value, end value, duration, and other parameters. Use <code>.start()</code> to start the tween. Figures out interpolation between start and end values. Just do <code>TWEEN.update()</code> in update function.
+<pre class="code">
+// tweens val from 100 to -50 in 1200 milliseconds.
+new TWEEN.Tween({val: 100})
+  .to({val: -50}, 12000)
+  // use the interpolated value to update the camera's z position
+  .onUpdate(function() {
+    cameraZPosition.position.z = this.val;
+  })
+  // start animation
+  .start();
+
+new TWEEN.Tween({val: -Math.PI/2})
+  .to({val: 0}, 6000)
+  // delays the start of the animation
+  .delay(1000)
+  // adjusts pacing of animation. Default is linear.
+  .easing(TWEEN.Easing.Quadratic.InOut)
+  .onUpdate(function() {
+    cameraXRotation.rotation.x = this.val;
+  })
+  .start();
+
+new TWEEN.Tween({val: 0})
+  .to({val: Math.PI/2}, 6000)
+  .delay(1000)
+  .easing(TWEEN.Easing.Quadratic.InOut)
+  .onUpdate(function() {
+    cameraYRotation.rotation.y = this.val;
+  })
+  .start();
+</pre>
+
 <h2>5. Materials and Textures</h2>
+Lots of materials!  Basically the same syntax.
+<pre class="code">
+function getMaterial(type, color) {
+	var selectedMaterial;
+	var materialOptions = {
+		color: color === undefined ? 'rgb(255, 255, 255)' : color,
+	};
+
+	switch (type) {
+		case 'basic':
+			selectedMaterial = new THREE.MeshBasicMaterial(materialOptions);
+			break;
+		case 'lambert':
+			selectedMaterial = new THREE.MeshLambertMaterial(materialOptions);
+			break;
+		case 'phong':
+			selectedMaterial = new THREE.MeshPhongMaterial(materialOptions);
+			break;
+		case 'standard':
+			selectedMaterial = new THREE.MeshStandardMaterial(materialOptions);
+			break;
+		default:
+			selectedMaterial = new THREE.MeshBasicMaterial(materialOptions);
+			break;
+	}
+
+	return selectedMaterial;
+}
+</pre>
+<br />
+Materials
+<ul>
+  <li>Basic: Not affected by lighting. Just displays given color.</li>
+  <li>Lambert: For diffuse surfaces like rubber, clay, stone. Very simple so performant, but may not yield most accurate results.</li>
+  <li>Phong: Can control highlights on material. </li>
+  <ul>
+    <li>The <code>shininess</code> attribute (between 0 and 1000) controls how sharp the highlights are. The higher the value the sharper. Lower values for rough surfaces, higher values for glossier. Default is 30.</li>
+  </ul>
+  <li>Standard: Physically-based. Realistic. Industry standard, but more computationally expensive.</li>
+  <ul>
+    <li>The <code>roughness</code> attribute (between 0 and 1). It controls the sharpness of the reflections on the surface.</li>
+      <li>The <code>metalness</code> attribute (between 0 and 1). Sharpness of highlights?</li>
+  </ul>
+</ul>
+<br />
+Texture Maps!
+<ul>
+  <li>2D images mapped onto a material for surface detail.</li>
+  <li>Bump map: brightens value of texture to simulate height effect. Doesn't change surface. Just changes how the light interacts with the surface to create the illusion of the texture. Works best when used for subtle effect.</li>
+  <li>Roughness map: dark colors map to specular light colors map to diffuse. It controls the sharpness of the reflections on the surface.</li>
+    <ul>
+      <li>Works best when used in conjuncton with environment map. Objects reflect the environment as well as can set it as the background of the sphere.</li>
+      <li>In Three.js, environment maps are cubemaps.</li>
+    </ul>
+</ul>
+<pre class="code">
+var path = '/assets/cubemap/';
+var format = '.jpg';
+var urls = [
+  path + 'px' + format, path + 'nx' + format,
+  path + 'py' + format, path + 'ny' + format,
+  path + 'pz' + format, path + 'nz' + format
+];
+var reflectionCube = new THREE.CubeTextureLoader().load(urls);
+reflectionCube.format = THREE.RGBFormat;
+
+scene.background = reflectionCube;
+
+var loader = new THREE.TextureLoader();
+// color mapping
+planeMaterial.map = loader.load('/assets/textures/concrete.jpg');
+planeMaterial.bumpMap = loader.load('/assets/textures/concrete.jpg');
+planeMaterial.roughnessMap = loader.load('/assets/textures/concrete.jpg');
+// affects bump map heights
+planeMaterial.bumpScale = 0.01;
+planeMaterial.metalness = 0.1;
+planeMaterial.roughness = 0.7;
+// reflects the environment map
+planeMaterial.envMap = reflectionCube;
+sphereMaterial.roughnessMap = loader.load('/assets/textures/fingerprints.jpg');
+// reflects the environment map
+sphereMaterial.envMap = reflectionCube;
+
+var maps = ['map', 'bumpMap', 'roughnessMap'];
+maps.forEach(function(mapName) {
+  var texture = planeMaterial[mapName];
+  // by default, texture is stretched across image. Can wrap instead.
+  // x-axis
+  texture.wrapS = THREE.RepeatWrapping;
+  // y-axis
+  texture.wrapT = THREE.RepeatWrapping;
+  // repetition frequency is 15
+  texture.repeat.set(15, 15);
+});
+</pre>
+
 <h2>6. Geometries</h2>
+All Three.js primitive geometries: box, cone, cylinder, octahedron, sphere, tetrahedron, torus, torus knot.
+<br />
+<a href="https://threejsfundamentals.org/threejs/lessons/threejs-primitives.html">https://threejsfundamentals.org/threejs/lessons/threejs-primitives.html</a> has a cool interactive demo!
+<br />
+Primitive usually the building blocks of more complicated geometries (procedure called modeling). Achieved by manipulating the vertices, edges, and faces of a base geometry.
+<br />
+Segment values affect densities of polygons on objects.
+<br />
+Each object has a <code>geometry</code> property that stores the object's vertices. Can modify the vertices (in local coordinates. For example, to move vertices in the global y-axis for a plane rotated 90 degrees, modify the z-axis).
+<pre class="code">
+var plane = scene.getObjectByName('plane-1');
+var planeGeo = plane.geometry;
+planeGeo.vertices.forEach(function(vertex, index) {
+  vertex.z += Math.sin(elapsedTime + index * 0.1) * 0.005;
+});
+planeGeo.verticesNeedUpdate = true;
+</pre>
+Can create models ourselves by specifying vertices, but can also import external 3D models. <a href="https://www.turbosquid.com/">https://www.turbosquid.com/</a>, <a href="https://clara.io/">https://clara.io/</a>, and <a href="https://sketchfab.com/">https://sketchfab.com/</a> have a lot of 3D models for sale and for free.
+<br />
+Three.js supports loading: FBX, OBJ, STL filetypes. Use the associated loader to load the file.
+
 <h2>7. Particles</h2>
+For particle objeects, Three.js' workflow is to create a geometry and populate the vertices with points. Then, feeding this into a Three.js Points function, it creates a particle system from the inputs. Alternatively, feed in existing objects into the points function as well. This method ensures that when the object is rendered, you don't see any faces or edges but just particles.
+Example for particles with randomly generated positions:
+<pre class="code">
+var particleGeo = new THREE.Geometry();
+var particleMat = new THREE.PointsMaterial({
+  color: 'rgb(255, 255, 255)',
+  size: 1,
+  map: new THREE.TextureLoader().load('/assets/textures/particle.jpg'),
+  transparent: true,
+  blending: THREE.AdditiveBlending,
+  depthWrite: false
+});
+
+var particleCount = 20000;
+var particleDistance = 100;
+
+for (var i=0; i&lt;particleCount; i++) {
+  var posX = (Math.random() - 0.5) * particleDistance;
+  var posY = (Math.random() - 0.5) * particleDistance;
+  var posZ = (Math.random() - 0.5) * particleDistance;
+  var particle = new THREE.Vector3(posX, posY, posZ);
+
+  particleGeo.vertices.push(particle);
+}
+var particleSystem = new THREE.Points(
+  particleGeo,
+  particleMat
+);
+scene.add(particleSystem);
+</pre>
+Particles can have texture.
+<br />
+If the texture has a black background, get rid of it by settning the blending mode on the texture to THREE.AdditiveBlending and by setting the transparency to true.
+<br />
+This part in the point material instantiation.
+<pre class="code">
+map: new THREE.TextureLoader().load('/assets/textures/particle.jpg'),
+transparent: true,
+blending: THREE.AdditiveBlending,
+depthWrite: false
+</pre>
+In that case, generate particles by creating them directly. Can also set the particle system's geometry to an object and the vertices become the  particles.
+<br />
+Animate by changing vertex positions in the update function.
+<br />
+<br />
+Stats.js: JavaScript performance monitor. Shows FPS in corner.
+<br />
+To use:
+<pre class="code">
+var stats = new Stats();
+document.body.appendChild(stats.dom);
+...
+function update(renderer, scene, camera, controls, stats) {
+	...
+	stats.update();
+  ...
+}
+</pre>
+By default, FPS should be around 60. Lower indicates performance issues.
+
 <h2>8. Post-Processing</h2>
+GLSL: high-level shading language with syntax based on C.
+<br />
+Shaders (post-processing) not supported by the core Three.js library. However, the Three.js examples page has many shader files.
+<br />
+To add post-processing, need to use the <code>EffectsComposer</code> object. Not in the core Three.js library. Found in the three.js/examples/js/postprocessing folder in the Github repo.
+<br />
+The <code>EffectsComposer</code> depends on the <code>RenderPass</code>, <code>CopyShader</code>, and <code>ShaderPass</code>.
+<pre class="code">
+var composer = new THREE.EffectComposer(renderer);
+var renderPass = new THREE.RenderPass(scene, camera);
+composer.addPass(renderPass);
+
+var vignetteEffect = new THREE.ShaderPass(THREE.VignetteShader);
+vignetteEffect.uniforms['darkness'].value = 2;
+composer.addPass(vignetteEffect);
+</pre>
+(Need to add each shader's script to the HTML. They're in the same folder as the EffectComposer.)
+<br />
+Can also write your own or use community's shaders.
+
 <h2>Conclusion</h2>
+Three.js has a lot of examples! Going through them can teach you a lot and show you what it is capable of.
+<br />
+WhitestormJS: 3D framework built with Three.js to make 3D physics simulations easier.
