Based on tutorial script

--- a/milestone.html
+++ b/milestone.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="penrosetriangle.svg">
 </head>
-<body class="page sans">
+
+<body class="sans">
 <a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <b><a href="#">MILESTONE</a></b> / <a href="./project.html">PROJECT</a>  / <a href="./demo.html">DEMO</a>
 <br />
 <br />
@@ -16,3 +17,5 @@ Eunice Chan | <i>August 7, 2020</i>
 <br />
 <h2>Under construction!</h2>
 <br />
+</body>
+</html>
