--- a/milestone.html
+++ b/milestone.html
@@ -15,7 +15,24 @@
 <h1 class="page-title">Expressive Inverse Kinematics</h1><h1>CS 184 Final Project Milestone Report</h1>
 Eunice Chan | <i>August 7, 2020</i>
 <br />
-<h2>Under construction!</h2>
+<br />
+<!--
+This should be about 1 page long if printed. You should briefly summarize what you have accomplished, preliminary results, reflect on progress relative to your plan, and update your work plan as appropriate.
+ -->
+It has been a week since I started this project, meaning I am now at the halfway point of the project. I will now take a step back and assess my current progress.
+
+<h2>Achievements & Preliminary Results</h2>
+<ul>
+  <li>Created demo</li>
+</ul>
+<h2>Progress</h2>
+I have managed to achieve everything I have set out to do so my current progress is exactly as planned.
+<h2>Work Plan Updates</h2>
+The most updated version of the work plan is <a href="./proposal.html">here</a>.
+<br />
+<br />
+The changes I have made to the plan are:
+<p class="highlight-orange_background"><i>August 4 Update</i>: Made SMCM a goal and moved the two models to reach goal. </p>
 <br />
 </body>
 </html>
