--- a/milestone.html
+++ b/milestone.html
@@ -21,10 +21,21 @@ This should be about 1 page long if printed. You should briefly summarize what y
  -->
 It has been a week since I started this project, meaning I am now at the halfway point of the project. I will now take a step back and assess my current progress.
 
-<h2>Achievements & Preliminary Results</h2>
-<ul>
-  <li>Created demo</li>
-</ul>
+<h2>Achievements and Preliminary Results</h2>
+<table>
+  <tr>
+    <td>
+      <img src="./images/model.png"/>
+      <figurecaption>
+        The simple arm model I would be manipulating.
+        Initially I modeled and rigged in Blender, but it was very difficult figuring out how to get the object loaded and rigged properly. I ended up making it in the script instead of uploading an object.
+      </figurecaption>
+    </td>
+    <td>
+      h
+    </td>
+  </tr>
+</table>
 <h2>Progress</h2>
 I have managed to achieve everything I have set out to do so my current progress is exactly as planned.
 <h2>Work Plan Updates</h2>
