--- a/milestone.html
+++ b/milestone.html
@@ -28,7 +28,7 @@ It has been a week since I started this project, meaning I am now at the halfway
       <img src="./images/model.png"/>
       <figurecaption>
         The simple arm model I would be manipulating.
-        Initially I modeled and rigged in Blender, but it was very difficult figuring out how to get the object loaded and rigged properly. I ended up making it in the script instead of uploading an object.
+        Initially I modeled and rigged in Blender, but it was frustrating figuring out how to get the object loaded and rigged properly. I ended up making it in the script instead of uploading an object.
       </figurecaption>
     </td>
     <td>
